Add ability to update a projects 'tracking status'
  - this can be done from project show action only
  - add translations that match the enums (will need to keep in sync)
  - create a partial for the tracking status selector
  - enable simple_form to use its own translations 'en.simple_form' from its own file

--- a/config/locales/simple_form.en.yml
+++ b/config/locales/simple_form.en.yml
@@ -29,3 +29,22 @@ en:
     # prompts:
     #   defaults:
     #     age: 'Select your age'
+    labels:
+      project:
+        tracking_status: Tracking Status
+    options:
+      project:
+        tracking_status:
+          draft: Draft
+          pending: Pending
+          in_progress: In Progress
+          awaiting_information: Awaiting Information
+          awaiting_approval: Awaiting Approval
+          approved: Approved
+          overdue: Overdue
+          cancelled: Cancelled
+          completed: Completed
+    buttons:
+      project:
+        tracking_status:
+          submit: "%{btn_action_type} Status"
